[gd_scene load_steps=5 format=3 uid="uid://baww0d30xir82"]

[ext_resource type="Texture2D" uid="uid://cw8gsl2ooqsdr" path="res://assets/sprites/misc/labyrinth.png" id="1_cavxx"]
[ext_resource type="Script" path="res://scenes/interactive/mouse_mini_game.gd" id="1_tr8y5"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_pc1ot"]
size = Vector2(6, 2)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_djtxf"]
size = Vector2(7, 9.16667)

[node name="MouseMiniGame" type="Node2D"]
position = Vector2(287, 159)
scale = Vector2(3, 3)
script = ExtResource("1_tr8y5")

[node name="GameArea" type="Area2D" parent="."]

[node name="Sprite2D" type="Sprite2D" parent="GameArea"]
texture = ExtResource("1_cavxx")
metadata/_edit_group_ = true

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="GameArea"]
polygon = PackedVector2Array(-26, 32, -26, -28, 28, -28, 28, 28, -16, 28, -16, 5, 1, 5, 1, 15, 6, 15, 6, 4, 14, 4, 14, 0, -16, 0, -16, -11, 3.82231, -11, 18, -11, 18, -19, 15, -19, 15, -12, 9, -12, 9, -19, 6, -19, 6, -12, -2, -12, -2, -19, -5, -19, -5, -12, -16, -12, -16, -21, -9, -21, -9, -14, -7, -14, -7, -21, 0, -21, 0, -14, 4, -14, 4, -21, 11, -21, 11, -14, 13, -14, 13, -21, 20, -21, 20, -8, -14, -8, -14, -5, 20, -5, 20, 9, 11, 9, 11, 20, -3, 20, -4, 20, -4, 11, -10, 11, -10, 22, 22, 22, 22, -22, -20, -22, -20, 32)
metadata/_edit_group_ = true

[node name="StartArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="StartArea"]
position = Vector2(-23, 31)
shape = SubResource("RectangleShape2D_pc1ot")

[node name="WinArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="WinArea"]
position = Vector2(-12.5, -16.5833)
shape = SubResource("RectangleShape2D_djtxf")

[connection signal="mouse_entered" from="GameArea" to="." method="_on_game_area_mouse_entered"]
[connection signal="mouse_exited" from="GameArea" to="." method="_on_game_area_mouse_exited"]
[connection signal="mouse_entered" from="StartArea" to="." method="_on_start_area_mouse_entered"]
[connection signal="mouse_entered" from="WinArea" to="." method="_on_win_area_mouse_entered"]
